core/roboconf-core/src/test/resources/configurations/invalid/component-extends-inexisting-component.graph

VM_EC2 {
	extends: VM;
}
